<resources>
    <string name="app_name">Попей водички</string>
    <string name="clickCount">click_count</string>
    <string name="chosenCup">chosenCup</string>
    <string name="todayGoal">todayGoal</string>
    <string name="todayCheck">todayCheck</string>
    <string name="todayGoalDoneString">Сегодняшняя цель выполнена!\nТак держать!\n</string>
    <string name="PlusWaterButtonText">+</string>
    <string name="ClearWaterButtonText">Обнулить</string>
    <string name="DrankTodayTextView">Выпито сегодня</string>
    <string name="goal">Цель</string>
    <string name="ChangeCupButtonText">сменить объём</string>
    <string name="PickCupTextView">Выберите объём</string>
    <string name="pickTimeIntervalButtonText">Интервал</string>
    <string name="continueButton">Продолжить</string>
    <string name="AboutText">Разработано в ТУСУР\n© Кирилл Мазнев\n2022</string>
</resources>