<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/MainActivityView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alwaysDrawnWithCache="true"
    android:background="@color/appBackground"
    android:clipToPadding="false"
    android:theme="@style/Theme.drinkwaternow">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimaryVariant"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Попей водички"
        app:titleTextColor="?attr/colorOnPrimary"
        tools:layout_editor_absoluteX="145dp" />

    <ImageButton
        android:id="@+id/pickTimeForNotifActivityButton"
        android:layout_width="40sp"
        android:layout_height="40sp"
        android:background="@color/backgroundForVectorButton"
        android:elevation="4dp"
        android:src="@drawable/ic_baseline_notifications_24"
        android:textAlignment="center"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.976"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.5" />

    <ImageButton
        android:id="@+id/zeroWaterButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="4dp"
        android:background="@color/backgroundForVectorButton"
        android:src="@drawable/ic_baseline_delete_24"
        android:text="@string/ClearWaterButtonText"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toStartOf="@+id/pickTimeForNotifActivityButton"
        app:layout_constraintHorizontal_bias="0.972"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.666" />

    <ImageButton
        android:id="@+id/aboutButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="4dp"
        android:background="@color/backgroundForVectorButton"
        android:src="@drawable/ic_baseline_help_24"
        android:text="@string/ClearWaterButtonText"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toStartOf="@+id/zeroWaterButton"
        app:layout_constraintHorizontal_bias="0.968"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.666" />

    <ImageButton
        android:id="@+id/statsButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="4dp"
        android:background="@color/backgroundForVectorButton"
        android:src="@drawable/ic_baseline_auto_graph_24"
        android:text="@string/ClearWaterButtonText"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toStartOf="@+id/aboutButton"
        app:layout_constraintHorizontal_bias="0.964"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.666" />

    <ImageView
        android:id="@+id/backgroundRectangle"
        android:layout_width="360dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rectangle_shape_for_main_activity"
        android:clipToPadding="false"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <ImageButton
        android:id="@+id/editGoalButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="2dp"
        android:background="@color/backgroundForVectorButton"
        android:elevation="5dp"
        android:src="@drawable/ic_baseline_edit_24"
        android:text="@string/ClearWaterButtonText"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintBottom_toTopOf="@+id/todayWaterProgressBar"
        app:layout_constraintEnd_toStartOf="@+id/drankWaterTextView"
        app:layout_constraintTop_toTopOf="@+id/backgroundRectangle"
        app:layout_constraintVertical_bias="0.0" />

    <ProgressBar
        android:id="@+id/todayWaterProgressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="300dp"
        android:layout_height="15dp"
        android:elevation="6dp"
        android:max="20000"
        android:progress="0"
        android:progressDrawable="@drawable/water_progressbar"
        app:layout_constraintBottom_toBottomOf="@+id/backgroundRectangle"
        app:layout_constraintEnd_toEndOf="@+id/backgroundRectangle"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="@+id/backgroundRectangle"
        app:layout_constraintTop_toTopOf="@+id/backgroundRectangle"
        app:layout_constraintVertical_bias="0.661" />

    <TextView
        android:id="@+id/drankWaterTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        android:text="@string/DrankTodayTextView"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/darkerBlueForStatusBar"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/todayWaterProgressBar"
        app:layout_constraintHorizontal_bias="0.852"
        app:layout_constraintLeft_toLeftOf="@+id/backgroundRectangle"
        app:layout_constraintRight_toRightOf="@+id/backgroundRectangle"
        app:layout_constraintTop_toTopOf="@+id/backgroundRectangle"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/goalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        android:text="@string/goal"
        android:textAlignment="center"
        android:textColor="@color/darkerBlueForStatusBar"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/todayWaterProgressBar"
        app:layout_constraintHorizontal_bias="0.085"
        app:layout_constraintLeft_toLeftOf="@+id/backgroundRectangle"
        app:layout_constraintRight_toRightOf="@+id/backgroundRectangle"
        app:layout_constraintTop_toTopOf="@+id/backgroundRectangle"
        app:layout_constraintVertical_bias="0.5" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/addWaterButton"
        android:layout_width="60sp"
        android:layout_height="60sp"
        android:background="@drawable/rounded_button"
        android:elevation="5dp"
        android:text="@string/PlusWaterButtonText"
        android:textAlignment="center"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backgroundRectangle"
        app:layout_constraintVertical_bias="0.931" />

    <ImageButton
        android:id="@+id/changeCupButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:elevation="5dp"
        android:background="@color/backgroundForVectorButton"
        android:src="@drawable/ic_baseline_local_drink_24"
        android:text="@string/ChangeCupButtonText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.147"
        app:layout_constraintStart_toEndOf="@+id/addWaterButton"
        app:layout_constraintTop_toBottomOf="@+id/backgroundRectangle"
        app:layout_constraintVertical_bias="0.919" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/DailyIntakesRV"
        android:layout_width="360dp"
        android:layout_height="450dp"
        android:elevation="1dp"
        android:maxHeight="450dp"
        app:layout_constraintBottom_toTopOf="@+id/addWaterButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backgroundRectangle" />


</androidx.constraintlayout.widget.ConstraintLayout>